--- a/package.json
+++ b/package.json
@@ -67,7 +67,12 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/"
-    ]
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@app/cats(|/.*)$": "<rootDir>/libs/cats/src/$1",
+      "^@app/ctas(|/.*)$": "<rootDir>/libs/ctas/src/$1"
+    }
   }
 }
