--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,30 +1,21 @@
-{
-    // IntelliSense를 사용하여 가능한 특성에 대해 알아보세요.
-    // 기존 특성에 대한 설명을 보려면 가리킵니다.
-    // 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387을(를) 방문하세요.
-    "version": "0.2.0",
-    "configurations": [
+
         {
-            "type": "node",
-            "request": "launch",
-            "name": "debug nestjs",
-            "args": [ "${workspaceFolder}\\apps\\poc-1\\src\\main.ts"
-            ],
-            "runtimeArgs": [
-                "-r",
-                "ts-node/register",
-                "-r",
-                "tsconfig-paths/register"
-            ],
-            "sourceMaps": true,
-            "envFile": "${workspaceFolder}/.env",
-            "cwd": "${workspaceRoot}/apps/poc-1",
-            "protocol": "inspector",
-            "console": "integratedTerminal",
-            "runtimeExecutable": "node",
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
+            "version": "0.2.0",
+            "configurations": [
+                {
+                    "type": "node",
+                    "request": "launch",
+                    "name": "Launch Program",
+                    "skipFiles": [
+                        "${workspaceFolder}/node_modules/**/*.js",
+                        "<node_internals>/**"
+                    ],
+                    "program": "${workspaceFolder}/src/main.ts",
+                    "preLaunchTask": "npm: start:debug",
+                    "outFiles": [
+                        "${workspaceFolder}/dist/**/*.js"
+                    ]
+                }
             ]
         }
-    ]
-}
+
